--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "prepare": "husky install"
   },
   "peerDependencies": {
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
+    "@nestjs/common": "^9.0.0 || ^10.0.0",
+    "@nestjs/core": "^9.0.0 || ^10.0.0",
     "express": "^4.18.1",
     "fastify": "^4.7.0",
     "@fastify/static": "^6.5.0"
