--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "peerDependencies": {
     "@nestjs/common": "^9.0.0 || ^10.0.0",
     "@nestjs/core": "^9.0.0 || ^10.0.0",
-    "express": "^4.18.1",
+    "express": "^4.18.1 || ^5.0.0",
     "fastify": "^4.7.0",
     "@fastify/static": "^6.5.0 || ^7.0.0"
   },
