--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "publish:next": "npm publish --access public --tag next",
     "prerelease": "npm run build",
     "release": "release-it",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "peerDependencies": {
-    "@nestjs/common": "^9.0.0 || ^10.0.0",
-    "@nestjs/core": "^9.0.0 || ^10.0.0",
-    "express": "^4.18.1",
-    "fastify": "^4.7.0",
-    "@fastify/static": "^6.5.0 || ^7.0.0"
+    "@nestjs/common": "^11.0.2",
+    "@nestjs/core": "^11.0.2",
+    "express": "^4.21.2",
+    "fastify": "^5.2.1",
+    "@fastify/static": "^8.0.4"
   },
   "peerDependenciesMeta": {
     "express": {
@@ -37,25 +37,25 @@
   },
   "devDependencies": {
     "@commitlint/cli": "19.6.1",
-    "@commitlint/config-angular": "19.6.0",
+    "@commitlint/config-angular": "19.7.0",
     "@nestjs/common": "10.4.15",
     "@nestjs/core": "10.4.15",
-    "@types/node": "22.10.2",
-    "@typescript-eslint/eslint-plugin": "8.18.0",
-    "@typescript-eslint/parser": "8.18.0",
-    "eslint": "9.17.0",
-    "eslint-config-prettier": "9.1.0",
+    "@types/node": "22.10.7",
+    "@typescript-eslint/eslint-plugin": "8.20.0",
+    "@typescript-eslint/parser": "8.20.0",
+    "eslint": "9.18.0",
+    "eslint-config-prettier": "10.0.1",
     "eslint-plugin-import": "2.31.0",
     "express": "4.21.2",
     "fastify": "4.29.0",
     "@fastify/static": "7.0.4",
     "husky": "9.1.7",
-    "lint-staged": "15.2.11",
+    "lint-staged": "15.4.1",
     "prettier": "3.4.2",
     "reflect-metadata": "0.2.2",
-    "release-it": "17.10.0",
+    "release-it": "18.1.1",
     "rxjs": "7.8.1",
-    "typescript": "5.7.2"
+    "typescript": "5.7.3"
   },
   "lint-staged": {
     "*.ts": [
@@ -67,6 +67,6 @@
     "url": "https://github.com/nestjs/serve-static"
   },
   "dependencies": {
-    "path-to-regexp": "0.2.5"
+    "path-to-regexp": "8.2.0"
   }
 }
