--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "peerDependencies": {
     "@nestjs/common": "^11.0.2",
     "@nestjs/core": "^11.0.2",
-    "express": "^4.21.2",
+    "express": "^5.0.1",
     "fastify": "^5.2.1",
     "@fastify/static": "^8.0.4"
   },
@@ -38,24 +38,26 @@
   "devDependencies": {
     "@commitlint/cli": "19.6.1",
     "@commitlint/config-angular": "19.7.0",
-    "@nestjs/common": "10.4.15",
-    "@nestjs/core": "10.4.15",
+    "@eslint/eslintrc": "3.2.0",
+    "@eslint/js": "9.18.0",
+    "@nestjs/common": "11.0.2",
+    "@nestjs/core": "11.0.2",
     "@types/node": "22.10.7",
-    "@typescript-eslint/eslint-plugin": "8.20.0",
-    "@typescript-eslint/parser": "8.20.0",
     "eslint": "9.18.0",
     "eslint-config-prettier": "10.0.1",
-    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-prettier": "5.2.3",
+    "globals": "15.14.0",
     "express": "4.21.2",
-    "fastify": "4.29.0",
-    "@fastify/static": "7.0.4",
+    "fastify": "5.2.1",
+    "@fastify/static": "8.0.4",
     "husky": "9.1.7",
     "lint-staged": "15.4.1",
     "prettier": "3.4.2",
     "reflect-metadata": "0.2.2",
     "release-it": "18.1.1",
     "rxjs": "7.8.1",
-    "typescript": "5.7.3"
+    "typescript": "5.7.3",
+    "typescript-eslint": "8.20.0"
   },
   "lint-staged": {
     "*.ts": [
