--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
   build:
     working_directory: ~/nest
     docker:
-      - image: cimg/node:21.7
+      - image: cimg/node:22.3
     steps:
       - checkout
       - restore_cache:
@@ -33,8 +33,23 @@ jobs:
           name: Build
           command: npm run build
 
+  e2e_test:
+    working_directory: ~/nest
+    docker:
+      - image: cimg/node:22.3
+    steps:
+      - checkout
+      - *restore-cache
+      - *install-deps
+      - run:
+          name: E2E tests
+          command: npm run test:e2e
+
 workflows:
   version: 2
   build-and-test:
     jobs:
       - build
+      - e2e_test:
+          requires:
+            - build
