--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "publish:next": "npm publish --access public --tag next",
     "prerelease": "npm run build",
     "release": "release-it",
+    "test:e2e": "jest --config ./tests/jest-e2e.json --runInBand",
     "prepare": "husky"
   },
   "peerDependencies": {
+    "@fastify/static": "^8.0.4",
     "@nestjs/common": "^11.0.2",
     "@nestjs/core": "^11.0.2",
     "express": "^5.0.1",
-    "fastify": "^5.2.1",
-    "@fastify/static": "^8.0.4"
+    "fastify": "^5.2.1"
   },
   "peerDependenciesMeta": {
     "express": {
@@ -40,22 +41,30 @@
     "@commitlint/config-angular": "19.7.0",
     "@eslint/eslintrc": "3.2.0",
     "@eslint/js": "9.18.0",
+    "@fastify/static": "8.0.4",
     "@nestjs/common": "11.0.2",
     "@nestjs/core": "11.0.2",
+    "@nestjs/platform-express": "11.0.2",
+    "@nestjs/platform-fastify": "11.0.2",
+    "@nestjs/testing": "11.0.2",
+    "@types/jest": "29.5.14",
     "@types/node": "22.10.7",
+    "@types/supertest": "6.0.2",
     "eslint": "9.18.0",
     "eslint-config-prettier": "10.0.1",
     "eslint-plugin-prettier": "5.2.3",
-    "globals": "15.14.0",
     "express": "4.21.2",
     "fastify": "5.2.1",
-    "@fastify/static": "8.0.4",
+    "globals": "15.14.0",
     "husky": "9.1.7",
+    "jest": "29.7.0",
     "lint-staged": "15.4.1",
     "prettier": "3.4.2",
     "reflect-metadata": "0.2.2",
     "release-it": "18.1.1",
     "rxjs": "7.8.1",
+    "supertest": "7.0.0",
+    "ts-jest": "29.2.5",
     "typescript": "5.7.3",
     "typescript-eslint": "8.20.0"
   },
